tests/ui/01-empty.rs
#![warn(clippy::all, clippy::pedantic, clippy::nursery, rustdoc::all)]

use default_kwargs::default_args;

default_args! {}

fn main() {}
